# Computacion-Grafica

./: CMakeLists.txt
Composed matrix transformation/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Source.cpp  matrix.h
Matrices transformation/: CMakeCache.txt  OpenGLProyect.vcxproj  OpenGLProyect.vcxproj.filters  Source.cpp  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Parcial Práctico/: Source.cpp  ZERO_CHECK.vcxproj
Sierpiński_triangle/: OpenGLProyect.sln  OpenGLProyect.vcxproj  OpenGLProyect.vcxproj.filters  Source.cpp  matrix.h
primer_programa/programa1/: programa1.sln
primer_programa/programa1/libraries/: glfw3.lib
primer_programa/programa1/programa1/: programa1.vcxproj
triangulo/: CMakeCache.txt  OpenGLProyect.sln  OpenGLProyect.vcxproj  OpenGLProyect.vcxproj.filters  ZERO_CHECK.vcxproj
triangulos (r,g,b)/: ALL_BUILD.vcxproj  OpenGLProyect.vcxproj  OpenGLProyect.vcxproj.filters  Source.cpp  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
